[project]
name = "stress-classification-with-ppg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aicsimageio>=4.14.0",
    "matplotlib>=3.10.9",
    "nolds>=0.6.3",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
]
